fix(forge16/20): change `List#of` calls causing errors in tab completions